--- a/yml/train.yml
+++ b/yml/train.yml
@@ -23,7 +23,7 @@ data_specs:
   val_holdout_frac: 0.1
   data_workers:
 
-training_data_csv: '/workspace/data/csvs/sn7_baseline_train_df.csv'
+training_data_csv: ''
 validation_data_csv:
 inference_data_csv:
 
@@ -79,7 +79,7 @@ training:
     early_stopping:
         patience: 24
     model_checkpoint:
-      filepath: '/workspace/codes/CosmiQ_SN7_Baseline/models/sn7_baseline/xdxd_best.pth'
+      filepath: ''
       monitor: val_loss
     lr_schedule:
       schedule_type: arbitrary
@@ -87,7 +87,7 @@ training:
         milestones:
           - 200
         gamma: 0.1
-  model_dest_path: '/workspace/codes/CosmiQ_SN7_Baseline/models/sn7_baseline/xdxd_final.pth'
+  model_dest_path: ''
   verbose: true
 
 inference:
